# SRU-Odin

./: .gitignore  .gitmodules  LICENSE  README.md
Deployment/: CMakeLists.txt  README.md  package.xml  setup.py
Deployment/config/: sru_nav.yaml  waypoints_example.yaml
Deployment/docs/: DEPLOY_GO2_NX.md  PORTING_GUIDE.md  PORTING_GUIDE_EN.md
Deployment/launch/: sru_nav_go2.launch
Deployment/scripts/: launch_sru_nav.sh  setup_conda_env.sh  sru_nav_node  verify_port.sh  waypoint_runner.py
Deployment/src/sru_nav_go2/: constants.py  model.py  navigation_policy_node.py  visualization.py  waypoint_manager.py
Prompt/: PORTING_GUIDE.md
Train/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml
Train/mount/sru-navigation-sim/isaaclab_nav_task/navigation/assets/: __init__.py  go2.py
Train/mount/sru-navigation-sim/isaaclab_nav_task/terrains/: hf_terrains_maze.py
Train/mount/sru-navigation-sim/scripts/: ablate_depth.py  analyze_collisions.py  eval_jit_policy.py  eval_terminations.py  plot_collisions.py  train.py
Train/scripts/: ablate_depth.sh  analyze_collisions.sh  check_go2_registration.py  compare_baselines.sh  continue_go2.sh  convert_rsl_rl_ckpt_to_jit.py  eval_jit_baseline.sh  eval_terminations.sh  export_onnx.py  inspect_run.py  open_isaacsim_gui.sh  play_b2w_jit.sh  play_go2.sh  play_go2_gui.sh  probe_pt.py  probe_pt.sh  train_aow_d_mdpo.sh  train_b2w_dev.sh  train_b2w_ppo.sh  train_go2_continue.sh  train_go2_gui.sh  train_go2_scratch.sh  validate_go2_locomotion.py
(+12 files in other folders)
